client/src/App.css
/* ... */
:root {
  --form-input-size: 1.6rem;
  --form-input-size--clipboard: 1rem;
  --form-placeholder-size: 1.3rem;

  --color-primary: #55c57a;
  --color-primary-light: #7ed56f;
  --color-primary-damp: #3bac60;
  --color-primary-dark: #28b485;

  --color-secondary-light: #ffb900;
  --color-secondary-dark: #ff7730;
  --color-tertiary: #2998ff;
  --color-tertiary-light: #228be6;
  --color-tertiary-extra-light: #7ebbf0;
  --color-tertiary-dark: #1c7ed6;
  --color-tertiary-dark--1: #006ec9;
  --color-tertiary-dark--2: #3e7aeb;

  --color-purple-dark: #5643fa;

  --color-bg-calm-1: #f8f9fa;

  --color-grey-light-1: #f7f7f7;
  --color-grey-light-2: #eee;
  --color-grey-light-3: #e9e9e9;
  --color-grey-light-4: #e0e0e0;
  --color-input-border-1: #dee2e6;
  --color-input-border-2: #cfcfcf;
  --color-input-border-3: #ccc;
  --color-grey-dark-1-unfocused: rgb(153, 153, 153, 0.4);
  --color-grey-dark-1: #999;
  --color-grey-dark-2: #777;
  --color-grey-dark-3: #555;
  --color-grey-dark-4: #3f3f3f;
  --color-grey-dark-6: #6c757d;

  --color-grey-dark-5: #2f2f2f;
  --color-blue-dark-1: #495057;
  --color-white: #fff;
  --color-black: #000;
  --color-black--1: #1c1b1b;
  --color-black--2: #1a1717;

  --color-danger--1-unfocused: rgb(217, 83, 79, 0.4);
  --color-danger--1: #d9534f;

  --shadow-light-1: rgba(0, 0, 0, 0.22);

  --gradient-primary--1: linear-gradient(
    130deg,
    var(--color-primary-light) 0%,
    var(--color-primary-dark) 100%
  );
  --gradient-primary--2: linear-gradient(
    130deg,
    var(--color-primary) 0%,
    var(--color-primary-light) 60%,
    var(--color-primary-dark) 100%
  );

  --gradient-secondary--1: linear-gradient(
    130deg,
    var(--color-secondary-light) 0%,
    var(--color-secondary-dark) 100%
  );

  --nav-height: 80px;
  --nav-active-height: 4px;
  --nav-active-width: 4px;
  --nav-x-padding: 30px;
  --nav-gradient: linear-gradient(
    90deg,
    var(--color-black--1) 0%,
    var(--color-black--2) 100%
  );

  --default-border-radius: 10px;

  --poll-tools-padding-x: 10px;
  --poll-tools-padding-y: 5px;

  --poll-tools-action-padding-x: 4px;
  --poll-tools-action-padding-y: 2px;

  /* --gradient-secondary--2: linear-gradient(
      130deg,
      var(--color-secondary) 0%,
      var(--color-secondary-light) 60%,
      var(--color-secondary-dark) 100%
    ); */
}

* {
  /* font-family: "PT Sans", sans-serif; */
  font-family: "Montserrat", sans-serif;
}

/* Fix ugly buttons on iOS devices */
input {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 1;
}

/* Fix for Font Awesome */
.fas {
  font-family: "Font Awesome 5 Free" !important;
}

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

.privacy-policy {
  padding: 1em;
}
.privacy-policy > * {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

@media screen and (min-width: 961px) {
  .privacy-policy {
    padding: 5em;
  }

  .privacy-policy strong {
    margin-top: 1em;
  }

  .privacy-policy li,
  .privacy-policy li::marker {
    margin-left: 2em;
  }
  .privacy-policy > * {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 1.8em;
  }
}

._loading_overlay_content > div:first-child {
  width: auto;
  margin-bottom: 15px;
}
.RMM__close-button,
.RMM__close-button:hover {
  background: rgb(0, 0, 0) !important;
  margin-top: var(--nav-height);
}
.RMM__body,
.RMM__body.RMM__body--is-active {
  /* height: 100%; */
  /* height: calc(100vh - var(--nav-height)) !important; */
  /* max-height: calc(100vh - var(--nav-height)); */
  overflow: hidden !important;
}

@media screen and (max-width: 960px) {
  .RMM__body,
  .RMM__body.RMM__body--is-active {
    /* height: 100%; */
    /* height: calc(100vh - var(--nav-height)) !important; */
    overflow: auto !important;
  }
}

.modal-loader-overlay {
  border-radius: calc(var(--default-border-radius) - 0.5px);
}

.opacity-0 {
  opacity: 0 !important;
  transition: opacity 0.5s;
}

.RMM__placeholder {
  /* margin-top: var(--nav-height); */
  background: rgb(0, 0, 0);
  /* transition: background 4s ease-out; */
}

html {
  font-size: 62.5%;
}

body {
  box-sizing: border-box;
  background-color: var(--color-grey-dark-4);
  background: var(--color-bg-calm-1);
  overflow: auto !important;
}

.Toastify__toast-container.Toastify__toast-container--top-right,
.Toastify__toast-container.Toastify__toast-container--top-center,
.Toastify__toast-container.Toastify__toast-container--top-left {
  margin-top: var(--nav-height);
}

@media screen and (max-width: 960px) {
  .Toastify__toast-container.Toastify__toast-container--top-right,
  .Toastify__toast-container.Toastify__toast-container--top-center,
  .Toastify__toast-container.Toastify__toast-container--top-left {
    display: none;
  }
}

.app {
  position: relative;
  z-index: 4;
}
/* React widgets */
.rw-datepicker-label {
  padding-left: 0.6rem;
}

.rw-datetime-picker,
.rw-widget {
  font-size: 1.5rem !important;
  margin-right: -0.4rem;
  margin-left: 0.6rem;
}

.rw-widget-input,
.rw-input {
  height: 47px;
  width: 100%;
  border-radius: 4px;
  outline: none;
  font-size: var(--form-input-size);
  color: var(--color-blue-dark-1);
  font-family: "Montserrat", sans-serif;
}

.rw-widget-input::placeholder,
.rw-input::placeholder,
.rw-widget-input.rw-input::placeholder {
  font-size: var(--form-placeholder-size);
  font-weight: 400;
  color: var(--color-grey-dark-1);
  font-family: "Montserrat", sans-serif;
}

.rw-widget-container > .rw-input.rw-widget-input {
  height: 47px;
}

.btn {
  padding: 8px 20px;
  border-radius: 4px;
  outline: none;
  border: none;
  cursor: pointer;
  font-size: 1.8rem;
}

.btn.disabled,
.btn:disabled,
.btn.btn--tertiary.disabled,
.btn.btn--tertiary:disabled,
.btn--primary-outline.disabled,
.btn--primary-outline:disabled {
  background: var(--color-grey-dark-2);
  border-color: var(--color-grey-dark-2);
  color: var(--color-white);
  cursor: default;
}
/* ... */

